# analytics-decision-kit

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: confidentiality.md  datasets.md  kpi_definitions.md
docs/plotly/: brand_pca_dashboard.html  customer_analytics_dashboard.html  kmeans_customer_segmentation_dashboard.html  revenue_deciles_public_dataset.html  transactions_bubble_public_dataset.html
examples/: 01_customer_concentration.py  02_notebook_style_flow.py  03_public_github_dataset.py  04_kmeans_customer_segmentation.py  05_plotly_visuals_public_dataset.py  06_customer_analytics_dashboard.py  07_brand_pca.py
notebooks/: 01_customer_revenue_concentration.ipynb  02_kmeans_customer_segmentation.ipynb
src/analytics_decision_kit/: __init__.py  brand_pca.py  cli.py  concentration.py  customer_analysis.py  data_loader.py  executive_summary.py  kmeans_segmentation.py  metrics.py  plotly_dashboards.py  sample_data.py  segmentation.py
tests/: test_brand_pca.py  test_customer_analysis.py  test_data_loader.py  test_kmeans_segmentation.py  test_sample_data.py
