[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-decision-kit"
version = "0.1.0"
description = "Notebook-first toolkit for customer analytics, revenue concentration and executive KPI summaries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Calin Uioreanu" }
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.4"  
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

viz = [
  "plotly>=5.20"
]

notebook = [
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "plotly>=5.20"
]

all = [
  "pytest>=8.0",
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "plotly>=5.20"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[project.scripts]
adk-demo = "analytics_decision_kit.cli:run_demo"
adk-dashboard = "analytics_decision_kit.cli:create_dashboard"
adk-kmeans = "analytics_decision_kit.cli:create_kmeans_dashboard"
adk-brand-pca = "analytics_decision_kit.cli:create_brand_pca_dashboard_command"
